CHATS_SIT/force-app/main/default/objects/T_EMPLMT_PAY_STUB__c/validationRules/Gross_Amount_Greater_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Gross_Amount_Greater_Than_0</fullName>
    <active>true</active>
    <description>Gross Amount before taxes and deductions cannot be less than 0.</description>
    <errorConditionFormula>AMT_INCOME_GROSS__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AMT_INCOME_GROSS__c</errorDisplayField>
    <errorMessage>Gross Amount before taxes and deductions cannot be less than 0.</errorMessage>
</ValidationRule>