CHATS_SIT/force-app/main/default/objects/T_EMPLMT_PAY_STUB__c/validationRules/Hours_worked_and_Care_needed_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_worked_and_Care_needed_Validation</fullName>
    <active>true</active>
    <description>Hours Worked and Care Needed cannot be less than 0.</description>
    <errorConditionFormula>CNT_WORKED_HOURS_STUB_PAY__c &lt; 0</errorConditionFormula>
    <errorDisplayField>CNT_WORKED_HOURS_STUB_PAY__c</errorDisplayField>
    <errorMessage>Hours Worked and Care Needed cannot be less than 0.</errorMessage>
</ValidationRule>