CHATS_SIT/force-app/main/default/objects/T_EMPLMT_PAY_STUB__c/validationRules/How_Verified_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>How_Verified_Required</fullName>
    <active>true</active>
    <description>How verified is required if Verified is Written Verification</description>
    <errorConditionFormula>ISPICKVAL(CDE_TYPE_VERIF__c,&apos;V&apos;) &amp;&amp; ISPICKVAL(CDE_SOURCE_VRFYD_PAY__c,&apos;&apos;) &amp;&amp; NOT(ISCHANGED(bypassValidations__c))</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_PAY__c</errorDisplayField>
    <errorMessage>Required if Verified is &apos;Written Verification&apos;</errorMessage>
</ValidationRule>