CHATS_SIT/force-app/main/default/objects/T_EMPLMT_PAY_STUB__c/validationRules/Pay_Date_CannotBe_b4_Inc_Effv_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Pay_Date_CannotBe_b4_Inc_Effv_Date</fullName>
    <active>true</active>
    <description>Pay Date Cannot be before Income Effective Date and Employment Begin Date</description>
    <errorConditionFormula>OR(
AND( 
     NOT( ISBLANK( DTE_PAY__c ) ),
     NOT( ISBLANK( IDN_EMPLMT_INCOME__c  ) ),
     NOT( ISBLANK( IDN_EMPLMT_INCOME__r.DTE_BEGIN_EFFV__c ) ),
     
     NOT( ISBLANK( 
 IDN_EMPLMT_INCOME__r.IDN_EMPLMT_INDIV__r.DTE_BEGIN_EFFV__c)),

     DTE_PAY__c &lt;  IDN_EMPLMT_INCOME__r.DTE_BEGIN_EFFV__c 
),
AND(
     NOT( ISBLANK( DTE_PAY__c ) ),
     NOT( ISBLANK( IDN_EMPLMT_INCOME__c  ) ),
     NOT( ISBLANK( IDN_EMPLMT_INCOME__r.IDN_EMPLMT_INDIV__c) ),
     NOT( ISBLANK( 
 IDN_EMPLMT_INCOME__r.IDN_EMPLMT_INDIV__r.DTE_BEGIN_EFFV__c)),
     DTE_PAY__c &lt; IDN_EMPLMT_INCOME__r.IDN_EMPLMT_INDIV__r.DTE_BEGIN_EFFV__c  
     
))</errorConditionFormula>
    <errorDisplayField>DTE_PAY__c</errorDisplayField>
    <errorMessage>Pay Date Cannot be before Income Effective Date and Employment Begin Date</errorMessage>
</ValidationRule>