CHATS_SIT/force-app/main/default/objects/T_EMPLMT_PAY_STUB__c/validationRules/Tips_Commisions_Bonuses_Greater_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Tips_Commisions_Bonuses_Greater_Than_0</fullName>
    <active>true</active>
    <description>Tips/Commisions/Bonuses cannot be less than 0.</description>
    <errorConditionFormula>AMT_TIPS_AVG__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AMT_TIPS_AVG__c</errorDisplayField>
    <errorMessage>Tips/Commisions/Bonuses cannot be less than 0.</errorMessage>
</ValidationRule>